# processor-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.tpl.yaml  config.yaml  docker-compose.yml  infobserve-schema.sql  publish.py
fixtures/: events.json
scripts/: run_docker_container.sh
src/: cli.rs  config.rs  errors.rs  event.rs  feeder.rs  logger.rs  main.rs  processing.rs  settings.rs  utils.rs
src/database/: connection.rs  loader.rs  mod.rs
src/entities/: ascii_match.rs  event.rs  flat_match.rs  index_cache.rs  mod.rs  processed_event.rs  rule_match.rs
