[package]
name = "processor-rs"
version = "0.1.0"
authors = ["Kostas Kolivas <kwstaskolivas@gmail.com>", "Mikts <mikts94@gmail.com>", "George Anastasiadis <dkspreegeorge@hotmail.com>", "Ougatron <xrisostomos.kinalidis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.4"
walkdir = "2"
yara = { version = "0.21.0", features = ["vendored"] }
log = "0.4"
crossbeam-channel = "0.5.0"
chrono = "0.4.19"
postgres = { version = "0.18.1", features = ["with-chrono-0_4"]}
r2d2 = "0.8.9"
r2d2_postgres = "0.16"
log4rs = "1.0.0"
anyhow = "1.0"
Inflector = "0.11.4"
num_cpus = "1.13"
thiserror = "1.0"
clap = "3.0.0-beta.2"
redis = "0.19"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
